2003-08-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/autogen.sh: Bugfix: copy aclocal.m4, autogen.sh also if
	they do not exist.

2003-08-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION (PACKAGE_NAME): released 1.9.1 

	* ly/engraver-init.ly (RemoveEmptyStaffContext): don't add
	Instrument_name_engraver

	* lily/tie-performer.cc (create_audio_elements): bugfix

	* Documentation/user/music-glossary.tely (Top): comment out
	font-style statements.

	* input/test/force-hshift.ly: revise example.

	* Documentation/bibliography/engraving.bib (note): typos.

	* configure.in: bump GCC requirements to 3.x

	* lily/include/audio-item.hh (class Audio_tie): rename
	note_l_drul_ to note_drul_

	* lily/tie-performer.cc (class Tie_performer): patch for new ties.

	* lily/parser.yy (relative_music): whoops. All \relative were off
	by ...  a lot .... Ahem.

	* scm/define-music-types.scm (music-descriptions): idem.

	* lily/beam-engraver.cc: move new-beam-event to beam-event

	* lily/tie-engraver.cc (class Tie_engraver): move New_tie_engraver
	to Tie_engraver

	* input/regression/bar-number.ly: remove unnecessary old-relative
	options.
	
	* Documentation/user/internals.itely (Creating contexts): document
	\newcontext

	* lily/parser.yy (Composite_music): add \newcontext

	* Documentation/user/refman.itely (MIDI block): add note about
	dotted tempos.

	* scm/font.scm: remove old markup legacy

	* GNUmakefile.in (web-clean): remake share/ after web-clean.

	* lily/breathing-sign.cc (brew_molecule): remove function

	* lily/text-item.cc: remove old-style markups.
	(interpret_markup): C++ version of markup function
	(brew_molecule): idem.

	* lily/my-lily-lexer.cc (start_main_input): define input-file-name
	as Scheme variable.

	* scripts/convert-ly.py (conv): dashes rule.
	Apply rule.

	* Documentation/user/lilypond-book.itely: syntax fixes. 

2003-08-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION (PACKAGE_NAME): release 1.9.0
